--- a/app/src/main/res/layout/activity_alerts.xml
+++ b/app/src/main/res/layout/activity_alerts.xml
@@ -6,4 +6,215 @@
     android:layout_height="match_parent"
     tools:context=".AlertsActivity">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/alertsHeader"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/header_background">
+
+        <ImageView
+            android:id="@+id/backArrow"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_baseline_arrow_back_24"
+            app:tint="@color/colorWhite"
+            android:layout_marginStart="15dp"
+            android:layout_marginLeft="10dp"
+            app:layout_constraintTop_toTopOf="@id/headerText"
+            app:layout_constraintBottom_toBottomOf="@id/headerText"
+            />
+
+        <TextView
+            android:id="@+id/headerText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginBottom="15dp"
+            android:text="Alerts"
+            android:textColor="@color/colorWhite"
+            android:textSize="25sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/medItem1"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:background="@drawable/white_rect_back"
+        android:layout_marginTop="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintTop_toBottomOf="@id/alertsHeader"
+        android:elevation="4dp">
+
+
+        <ImageView
+            android:id="@+id/medIcon1"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
+            android:src="@drawable/currentmeds_icon"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="NotSibling">
+
+        </ImageView>
+
+        <TextView
+            android:id="@+id/medName1"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:text="Medication Name"
+            app:layout_constraintStart_toEndOf="@id/medIcon1"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:textSize="20dp"
+            android:textStyle="bold">
+
+        </TextView>
+
+        <ImageView
+            android:id="@+id/addAlert1"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:src="@drawable/ic_baseline_add_alert_24"
+            app:layout_constraintTop_toTopOf="@id/medIcon1"
+            app:layout_constraintBottom_toBottomOf="@id/medIcon1"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp">
+
+        </ImageView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/medItem2"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:background="@drawable/white_rect_back"
+        android:layout_marginTop="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintTop_toBottomOf="@id/medItem1"
+        android:elevation="4dp">
+
+
+        <ImageView
+            android:id="@+id/medIcon2"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
+            android:src="@drawable/currentmeds_icon"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="NotSibling">
+
+        </ImageView>
+
+        <TextView
+            android:id="@+id/medName2"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:text="Medication Name"
+            app:layout_constraintStart_toEndOf="@id/medIcon2"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:textSize="20dp"
+            android:textStyle="bold">
+
+        </TextView>
+
+        <ImageView
+            android:id="@+id/addAlert2"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:src="@drawable/ic_baseline_add_alert_24"
+            app:layout_constraintTop_toTopOf="@id/medIcon2"
+            app:layout_constraintBottom_toBottomOf="@id/medIcon2"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp">
+
+        </ImageView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/medItem3"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:background="@drawable/white_rect_back"
+        android:layout_marginTop="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintTop_toBottomOf="@id/medItem2"
+        android:elevation="4dp">
+
+
+        <ImageView
+            android:id="@+id/medIcon3"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
+            android:src="@drawable/currentmeds_icon"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="NotSibling">
+
+        </ImageView>
+
+        <TextView
+            android:id="@+id/medName3"
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:text="Medication Name"
+            app:layout_constraintStart_toEndOf="@id/medIcon3"
+            android:layout_marginTop="10dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:textSize="20dp"
+            android:textStyle="bold">
+
+        </TextView>
+
+        <ImageView
+            android:id="@+id/addAlert3"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:src="@drawable/ic_baseline_add_alert_24"
+            app:layout_constraintTop_toTopOf="@id/medIcon3"
+            app:layout_constraintBottom_toBottomOf="@id/medIcon3"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp">
+
+        </ImageView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+
