--- a/app/src/main/res/layout/activity_medications.xml
+++ b/app/src/main/res/layout/activity_medications.xml
@@ -57,101 +57,374 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ScrollView
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/medItem1"
+        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="@id/divider"
-        app:layout_constraintTop_toBottomOf="@id/medicationsHeader">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/medItem1"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:background="@drawable/white_rect_back"
-            android:layout_marginTop="10dp"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginEnd="10dp">
+        android:background="@drawable/white_rect_back"
+        android:layout_marginTop="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintTop_toBottomOf="@id/medicationsHeader"
+        android:elevation="4dp">
 
 
-            <ImageView
-                android:id="@+id/medIcon1"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
-                android:src="@drawable/currentmeds_icon"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/medicationsHeader"
-                tools:ignore="NotSibling"
-                android:layout_marginTop="50dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginLeft="20dp">
+        <ImageView
+            android:id="@+id/medIcon1"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
+            android:src="@drawable/currentmeds_icon"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="NotSibling">
 
-            </ImageView>
+        </ImageView>
 
-            <TextView
-                android:id="@+id/medName1"
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:text="Medication Name"
-                app:layout_constraintStart_toEndOf="@id/medIcon1"
-                android:layout_marginTop="10dp">
+        <TextView
+            android:id="@+id/medName1"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:text="Medication Name"
+            app:layout_constraintStart_toEndOf="@id/medIcon1"
+            android:layout_marginTop="10dp">
 
-            </TextView>
+        </TextView>
 
-            <TextView
-                android:id="@+id/dosageText1"
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:text="Dosage"
-                app:layout_constraintStart_toEndOf="@id/medIcon1"
-                app:layout_constraintTop_toBottomOf="@id/medName1"
-                android:layout_marginTop="5dp">
+        <TextView
+            android:id="@+id/dosageText1"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:text="Dosage"
+            app:layout_constraintStart_toEndOf="@id/medIcon1"
+            app:layout_constraintTop_toBottomOf="@id/medName1"
+            android:layout_marginTop="5dp">
 
-            </TextView>
+        </TextView>
 
-            <TextView
-                android:id="@+id/dosageAmountText1"
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:text="Dosage Amt"
-                app:layout_constraintStart_toEndOf="@id/dosageText1"
-                app:layout_constraintTop_toBottomOf="@id/medName1"
-                android:layout_marginTop="5dp"
-                android:layout_marginStart="5dp"
-                android:layout_marginLeft="5dp">
+        <TextView
+            android:id="@+id/dosageAmountText1"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:text="Dosage Amt"
+            app:layout_constraintStart_toEndOf="@id/dosageText1"
+            app:layout_constraintTop_toBottomOf="@id/medName1"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp">
 
-            </TextView>
+        </TextView>
 
-            <TextView
-                android:id="@+id/startDateText1"
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:text="Start Date"
-                app:layout_constraintStart_toEndOf="@id/medIcon1"
-                app:layout_constraintTop_toBottomOf="@id/dosageText1"
-                android:layout_marginTop="5dp">
+        <TextView
+            android:id="@+id/startDateText1"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:text="Start Date"
+            app:layout_constraintStart_toEndOf="@id/medIcon1"
+            app:layout_constraintTop_toBottomOf="@id/dosageText1"
+            android:layout_marginTop="5dp">
 
-            </TextView>
+        </TextView>
 
-            <TextView
-                android:id="@+id/endDateText1"
-                android:layout_width="wrap_content"
-                android:layout_height="20dp"
-                android:text="End Date"
-                app:layout_constraintStart_toEndOf="@id/startDateText1"
-                app:layout_constraintTop_toBottomOf="@id/dosageText1"
-                android:layout_marginTop="5dp"
-                android:layout_marginStart="5dp"
-                android:layout_marginLeft="5dp">
+        <TextView
+            android:id="@+id/endDateText1"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:text="End Date"
+            app:layout_constraintStart_toEndOf="@id/startDateText1"
+            app:layout_constraintTop_toBottomOf="@id/dosageText1"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp">
 
-            </TextView>
+        </TextView>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/doctorText1"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:text="Doctor"
+            app:layout_constraintTop_toBottomOf="@id/startDateText1"
+            app:layout_constraintStart_toEndOf="@id/medIcon1"
+            android:layout_marginTop="5dp">
+        </TextView>
+
+        <TextView
+            android:id="@+id/directionText1"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:text="Directions"
+            android:layout_marginTop="5dp"
+            app:layout_constraintTop_toBottomOf="@id/doctorText1"
+            app:layout_constraintStart_toEndOf="@id/medIcon1">
+
+        </TextView>
+
+        <ImageView
+            android:id="@+id/removeMedIcon1"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:src="@drawable/ic_baseline_delete_24"
+            app:layout_constraintTop_toTopOf="@id/medIcon1"
+            app:layout_constraintBottom_toBottomOf="@id/medIcon1"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp">
+
+        </ImageView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/medItem2"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:background="@drawable/white_rect_back"
+        android:layout_marginTop="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintTop_toBottomOf="@id/medItem1"
+        android:elevation="4dp">
 
 
-    </ScrollView>
+        <ImageView
+            android:id="@+id/medIcon2"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
+            android:src="@drawable/currentmeds_icon"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="NotSibling">
+
+        </ImageView>
+
+        <TextView
+            android:id="@+id/medName2"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:text="Medication Name"
+            app:layout_constraintStart_toEndOf="@id/medIcon2"
+            android:layout_marginTop="10dp">
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/dosageText2"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:text="Dosage"
+            app:layout_constraintStart_toEndOf="@id/medIcon2"
+            app:layout_constraintTop_toBottomOf="@id/medName2"
+            android:layout_marginTop="5dp">
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/dosageAmountText2"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:text="Dosage Amt"
+            app:layout_constraintStart_toEndOf="@id/dosageText2"
+            app:layout_constraintTop_toBottomOf="@id/medName2"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp">
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/startDateText2"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:text="Start Date"
+            app:layout_constraintStart_toEndOf="@id/medIcon2"
+            app:layout_constraintTop_toBottomOf="@id/dosageText2"
+            android:layout_marginTop="5dp">
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/endDateText2"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:text="End Date"
+            app:layout_constraintStart_toEndOf="@id/startDateText2"
+            app:layout_constraintTop_toBottomOf="@id/dosageText2"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp">
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/doctorText2"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:text="Doctor"
+            app:layout_constraintTop_toBottomOf="@id/startDateText2"
+            app:layout_constraintStart_toEndOf="@id/medIcon2"
+            android:layout_marginTop="5dp">
+        </TextView>
+
+        <TextView
+            android:id="@+id/directionText2"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:text="Directions"
+            android:layout_marginTop="5dp"
+            app:layout_constraintTop_toBottomOf="@id/doctorText2"
+            app:layout_constraintStart_toEndOf="@id/medIcon2">
+
+        </TextView>
+
+        <ImageView
+            android:id="@+id/removeMedIcon2"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:src="@drawable/ic_baseline_delete_24"
+            app:layout_constraintTop_toTopOf="@id/medIcon2"
+            app:layout_constraintBottom_toBottomOf="@id/medIcon2"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp">
+
+        </ImageView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/medItem3"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:background="@drawable/white_rect_back"
+        android:layout_marginTop="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintTop_toBottomOf="@id/medItem2"
+        android:elevation="4dp">
+
+
+        <ImageView
+            android:id="@+id/medIcon3"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginLeft="20dp"
+            android:src="@drawable/currentmeds_icon"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="NotSibling">
+
+        </ImageView>
+
+        <TextView
+            android:id="@+id/medName3"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:text="Medication Name"
+            app:layout_constraintStart_toEndOf="@id/medIcon3"
+            android:layout_marginTop="10dp">
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/dosageText3"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:text="Dosage"
+            app:layout_constraintStart_toEndOf="@id/medIcon3"
+            app:layout_constraintTop_toBottomOf="@id/medName3"
+            android:layout_marginTop="5dp">
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/dosageAmountText3"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:text="Dosage Amt"
+            app:layout_constraintStart_toEndOf="@id/dosageText3"
+            app:layout_constraintTop_toBottomOf="@id/medName3"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp">
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/startDateText3"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:text="Start Date"
+            app:layout_constraintStart_toEndOf="@id/medIcon3"
+            app:layout_constraintTop_toBottomOf="@id/dosageText3"
+            android:layout_marginTop="5dp">
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/endDateText3"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:text="End Date"
+            app:layout_constraintStart_toEndOf="@id/startDateText3"
+            app:layout_constraintTop_toBottomOf="@id/dosageText3"
+            android:layout_marginTop="5dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginLeft="5dp">
+
+        </TextView>
+
+        <TextView
+            android:id="@+id/doctorText3"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:text="Doctor"
+            app:layout_constraintTop_toBottomOf="@id/startDateText3"
+            app:layout_constraintStart_toEndOf="@id/medIcon3"
+            android:layout_marginTop="5dp">
+        </TextView>
+
+        <TextView
+            android:id="@+id/directionText3"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:text="Directions"
+            android:layout_marginTop="5dp"
+            app:layout_constraintTop_toBottomOf="@id/doctorText3"
+            app:layout_constraintStart_toEndOf="@id/medIcon3">
+
+        </TextView>
+
+        <ImageView
+            android:id="@+id/removeMedIcon3"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:src="@drawable/ic_baseline_delete_24"
+            app:layout_constraintTop_toTopOf="@id/medIcon3"
+            app:layout_constraintBottom_toBottomOf="@id/medIcon3"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="20dp"
+            android:layout_marginRight="20dp">
+
+        </ImageView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNav"
