--- a/app/src/main/res/layout/activity_stats.xml
+++ b/app/src/main/res/layout/activity_stats.xml
@@ -4,6 +4,262 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StatsActivity">
+    tools:context=".StatsActivity"
+    android:background="@color/colorBackground">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/statsHeader"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@drawable/header_background">
+
+        <ImageView
+            android:id="@+id/backArrow"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:src="@drawable/ic_baseline_arrow_back_24"
+            app:tint="@color/colorWhite"
+            android:layout_marginStart="15dp"
+            android:layout_marginLeft="10dp"
+            app:layout_constraintTop_toTopOf="@id/headerText"
+            app:layout_constraintBottom_toBottomOf="@id/headerText"
+            />
+
+        <TextView
+            android:id="@+id/headerText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginBottom="15dp"
+            android:text="Stats"
+            android:textColor="@color/colorWhite"
+            android:textSize="25sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/addStatIcon"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginLeft="15dp"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/ic_baseline_add_24"
+            app:tint="@color/colorWhite"
+            app:layout_constraintBottom_toBottomOf="@id/headerText"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/headerText" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/statIcon"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:background="@drawable/white_rect_back"
+        android:layout_marginTop="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginEnd="10dp"
+        app:layout_constraintTop_toBottomOf="@id/statsHeader"
+        android:elevation="4dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+
+        <ImageView
+            android:id="@+id/statIconImage"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/mystats_icon"
+            app:layout_constraintStart_toStartOf="@id/statIcon"
+            app:layout_constraintEnd_toEndOf="@id/statIcon"/>
+
+        <TextView
+            android:id="@+id/userStatsText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="User's Stats"
+            app:layout_constraintTop_toBottomOf="@id/statIconImage"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:textStyle="bold"
+            android:textSize="30dp"
+            android:textColor="@color/colorPrimary"/>
+
+        <LinearLayout
+            android:id="@+id/textLayout"
+            android:layout_width="210dp"
+            android:layout_height="120dp"
+            app:layout_constraintTop_toBottomOf="@id/userStatsText"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <TextView
+            android:id="@+id/nameText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/userStatsText"
+            android:text="Name: "
+            android:textSize="20dp"
+            app:layout_constraintEnd_toEndOf="@id/textLayout"/>
+
+        <TextView
+            android:id="@+id/ageText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Age: "
+            app:layout_constraintTop_toBottomOf="@id/nameText"
+            app:layout_constraintEnd_toEndOf="@id/textLayout"
+            android:layout_marginTop="5dp"
+            android:textSize="20dp"/>
+
+        <TextView
+            android:id="@+id/weightText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Weight: "
+            app:layout_constraintTop_toBottomOf="@id/ageText"
+            app:layout_constraintEnd_toEndOf="@id/textLayout"
+            android:layout_marginTop="5dp"
+            android:textSize="20dp"/>
+
+        <TextView
+            android:id="@+id/medicationsText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Medications: 3"
+            app:layout_constraintTop_toBottomOf="@id/weightText"
+            app:layout_constraintEnd_toEndOf="@id/textLayout"
+            android:layout_marginTop="5dp"
+            android:textSize="20dp"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/medicationsIcons1"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:background="@drawable/white_rect_back"
+        android:layout_marginTop="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        app:layout_constraintTop_toBottomOf="@id/statIcon"
+        android:elevation="4dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/medicationsIcons2"
+        app:layout_constraintHorizontal_weight="1">
+
+        <ImageView
+            android:id="@+id/medListIcon"
+            android:layout_width="125dp"
+            android:layout_height="125dp"
+            android:src="@drawable/currentmeds_icon"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/medListText1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Medication"
+            app:layout_constraintTop_toBottomOf="@id/medListIcon"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/medicationsIcons2"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:background="@drawable/white_rect_back"
+        android:layout_marginTop="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginLeft="10dp"
+        app:layout_constraintTop_toBottomOf="@id/statIcon"
+        android:elevation="4dp"
+        app:layout_constraintStart_toEndOf="@id/medicationsIcons1"
+        app:layout_constraintEnd_toStartOf="@id/medicationsIcons3"
+        app:layout_constraintHorizontal_weight="1">
+
+        <ImageView
+            android:id="@+id/medListIcon2"
+            android:layout_width="125dp"
+            android:layout_height="125dp"
+            android:src="@drawable/currentmeds_icon"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/medListText2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Medication"
+            app:layout_constraintTop_toBottomOf="@id/medListIcon2"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/medicationsIcons3"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:background="@drawable/white_rect_back"
+        android:layout_marginTop="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        app:layout_constraintTop_toBottomOf="@id/statIcon"
+        android:elevation="4dp"
+        app:layout_constraintStart_toEndOf="@id/medicationsIcons2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_weight="1">
+
+        <ImageView
+            android:id="@+id/medListIcon3"
+            android:layout_width="125dp"
+            android:layout_height="125dp"
+            android:src="@drawable/currentmeds_icon"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <TextView
+            android:id="@+id/medListText3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Medication"
+            app:layout_constraintTop_toBottomOf="@id/medListIcon3"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNav"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:backgroundTint="@color/colorWhite"
+        app:itemIconSize="30dp"
+        app:labelVisibilityMode="unlabeled"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/nav_menu"
+        />
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/colorWhite"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNav"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
